--- a/QueensEight.Web/Content/variables.less
+++ b/QueensEight.Web/Content/variables.less
@@ -3,7 +3,7 @@
 // --------------------------------------------------
 @cellCount:             8;
 @cellSizeLarge:         75px;
-@cellSizeSmall:         13px;
+@cellSizeSmall:         15px;
 
 
 // Global values
@@ -27,6 +27,7 @@
 @blueDark:              #0064cd;
 @green:                 #46a546;
 @red:                   #9d261d;
+@redDark:               #330000;
 @yellow:                #fee909;
 @orange:                #fb6702;
 @pink:                  #c3325f;
