favicon and setting timing

--- a/QueensEight.Web/Views/Shared/_Layout.cshtml
+++ b/QueensEight.Web/Views/Shared/_Layout.cshtml
@@ -6,7 +6,7 @@
     <title>@ViewBag.Title</title>
 
     <link href="~/Content/site.css" rel="stylesheet" type="text/css" />
-
+    <link rel="SHORTCUT ICON" href='@Url.Content("~/favicon.ico")'/>
   </head>
   <body ng-app="QueensEight">
     <div class="main_content">
@@ -32,7 +32,7 @@
 
             <div class="muted legal">Built by <a href="http://www.twitter.com/dburton">@@dburton</a>
               and <a href="http://www.twitter.com/jayharris">@@jayharris</a>.
-              Queens Eight logo by John Lukas.</div>
+                Queens Eight logo by <a href="http://projeqt.com/jlucas">John Lucas</a>.</div>
             <div class="muted legal">Copyright &copy; 2013 Arana Software. All rights reserved.</div>
           </div>
         </div>
