Fixing font paths. Fixing path to Arana logo

--- a/Web/app/css/mixins.less
+++ b/Web/app/css/mixins.less
@@ -15,11 +15,11 @@
 
 .font-face(@family, @fileName) {
   font-family: @family;
-  src: url('./font/@{fileName}-webfont.eot');
-  src: url('./font/@{fileName}-webfont.eot?#iefix') format('embedded-opentype'),
-  url('./font/@{fileName}-webfont.woff') format('woff'),
-  url('./font/@{fileName}-webfont.ttf') format('truetype'),
-  url('./font/@{fileName}-webfont.svg#libra_btregular') format('svg');
+  src: url('../font/@{fileName}-webfont.eot');
+  src: url('../font/@{fileName}-webfont.eot?#iefix') format('embedded-opentype'),
+  url('../font/@{fileName}-webfont.woff') format('woff'),
+  url('../font/@{fileName}-webfont.ttf') format('truetype'),
+  url('../font/@{fileName}-webfont.svg#libra_btregular') format('svg');
   font-weight: normal;
   font-style: normal;
 }
