--- a/Web/app/css/variables.less
+++ b/Web/app/css/variables.less
@@ -2,13 +2,8 @@
 // Variables
 // --------------------------------------------------
 @board-cell-count:         8;
-@board-gutter-width:       20px;
+@board-gutter-width:       3%;
 @board-border-width:       2px;
-@board-cell-size-lg:       75px;
-@board-cell-size-sm:       15px;
-
-@board-lg-size:            (@board-cell-size-lg * @board-cell-count) + ((@board-border-width + @board-gutter-width) * 2);
-
 
 //== Colors
 //
